# iCryptoTrader

./: .gitignore  Dockerfile  README.md  REVIEW_PROMPT.md  docker-compose.yml  pyproject.toml
config/: default.toml
docs/design/: spot-bot-tax-architecture-viability-analysis.md
monitoring/: prometheus.yml
src/icryptotrader/: __init__.py  __main__.py  config.py  lifecycle.py  logging_setup.py  metrics.py  pair_manager.py  setup_wizard.py  types.py  watchdog.py
src/icryptotrader/analysis/: __init__.py  book_analyzer.py  bot_detector.py
src/icryptotrader/backtest/: engine.py
src/icryptotrader/fee/: fee_model.py  volume_quota.py
src/icryptotrader/inventory/: inventory_arbiter.py
src/icryptotrader/notify/: telegram.py
tests/: conftest.py  test_ai_signal.py  test_architecture_fixes.py  test_avellaneda_stoikov.py  test_backtest.py  test_backtest_engine.py  test_blow_through_overhaul.py  test_bollinger.py  test_book_analyzer.py  test_book_manager.py  test_bot_detector.py  test_config.py  test_delta_skew.py  test_ecb_rates.py  test_fee_model.py  test_fifo_ledger.py  test_grid_engine.py  test_hedge_manager.py  test_integration_e2e.py  test_inventory_arbiter.py  test_lifecycle.py  test_lot_viewer.py  test_main.py  test_metrics.py  test_order_manager.py  test_pair_manager.py  test_rate_limiter.py  test_regime_router.py  test_risk_manager.py  test_setup_wizard.py  test_strategy_loop.py  test_strategy_loop_wiring.py  test_tax_agent.py  test_tax_report.py  test_telegram.py  test_types.py  test_watchdog.py  test_web_dashboard.py  test_ws_codec.py
(+24 files in other folders)
